src/test/deca/codegen/interactive/valid/01readFloat.deca
// Description:
// Test du readFloat dans l'initialisation et l'assignation.
// On déclare deux variables, x sans initialisation,
// et y avec une initialisation avec un readFloat.
// On assigne ensuite à x une valeur avec un readFloat.
//
// Resultats:
//  6.78900e+01
//  5.60000e+00
//
// Historique:
//    crée le 10/06/2022
{
    float x;
    float y = readFloat();
    x = readFloat();
    println(x);
    println(y);
}
